Comments views,Register, Login, SearchBar, NavBar,UserProfile, Read_post added

--- a/web/app/src/screens/styles/styles.css
+++ b/web/app/src/screens/styles/styles.css
@@ -68,7 +68,7 @@
   --bs-highlight-bg: #fff3cd;
 }
 body{
-  background-image: url('/lightimage.jpg');  
+  background: linear-gradient(to bottom, #ffffff, #f8f9fa);
 }
 *,
 *::before,
