--- a/web/app/src/screens/styles/postStyles.css
+++ b/web/app/src/screens/styles/postStyles.css
@@ -598,6 +598,10 @@ progress {
 }
 
 .img-fluid {
+  width: 100%;
+  height: 100vh;
+}
+.post-img{
   max-width: 100%;
   height: auto;
 }
@@ -4269,11 +4273,17 @@ textarea.form-control-lg {
   padding: var(--bs-card-img-overlay-padding);
   border-radius: var(--bs-card-inner-border-radius);
 }
-
+.card-img-top-last{
+  border-top-left-radius: var(--bs-card-inner-border-radius);
+  border-top-right-radius: var(--bs-card-inner-border-radius);
+  width: 100%;
+  height: 60vh;
+}
 .card-img,
 .card-img-top,
 .card-img-bottom {
   width: 100%;
+  height: 35vh;
 }
 
 .card-img,
