--- a/web/app/src/screens/styles/postStyles.css
+++ b/web/app/src/screens/styles/postStyles.css
@@ -598,8 +598,8 @@ progress {
 }
 
 .img-fluid {
-  width: 100%;
-  height: 100vh;
+  max-width: 95%;
+  height: auto;
 }
 .post-img{
   max-width: 100%;
@@ -627,6 +627,27 @@ progress {
 .figure-caption {
   font-size: 0.875em;
   color: #6c757d;
+}
+.create-post-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.actual-content-container {
+    --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-right: auto;
+  margin-left: auto;
+  overflow-y: auto;
+  max-height: 100vh;
+  overflow: scroll;
+}
+.actual-content-article{
+  width: 90vh;
 }
 
 .container,
@@ -2769,6 +2790,10 @@ textarea.form-control-lg {
   z-index: 4;
 }
 
+.btn-post{
+  
+}
+
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
@@ -3628,6 +3653,7 @@ textarea.form-control-lg {
   font-size: var(--bs-nav-link-font-size);
   font-weight: var(--bs-nav-link-font-weight);
   color: var(--bs-nav-link-color);
+  cursor: pointer;;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4222,7 +4248,6 @@ textarea.form-control-lg {
 .card-text:last-child {
   margin-bottom: 0;
 }
-
 .card-link + .card-link {
   margin-left: var(--bs-card-spacer-x);
 }
@@ -7089,6 +7114,7 @@ textarea.form-control-lg {
   top: 50% !important;
 }
 
+
 .top-100 {
   top: 100% !important;
 }
@@ -7100,7 +7126,9 @@ textarea.form-control-lg {
 .bottom-50 {
   bottom: 50% !important;
 }
-
+.bottom-86{
+  bottom: 86% !important;
+}
 .bottom-100 {
   bottom: 100% !important;
 }
@@ -7112,7 +7140,10 @@ textarea.form-control-lg {
 .start-50 {
   left: 50% !important;
 }
+.start-93{
+  left: 93% !important;
 
+}
 .start-100 {
   left: 100% !important;
 }
@@ -7588,6 +7619,9 @@ textarea.form-control-lg {
 .my-4 {
   margin-top: 1.5rem !important;
   margin-bottom: 1.5rem !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .my-5 {
@@ -7619,8 +7653,19 @@ textarea.form-control-lg {
 .mt-4 {
   margin-top: 1.5rem !important;
 }
-
+.mt-5-create-post{
+  margin-left: 2rem !important;
+  
+}
+.mt-5-actual-content{
+ width: 35%; 
+}
 .mt-5 {
+  margin-top: 3rem !important;
+  
+}
+
+.actual-content{
   margin-top: 3rem !important;
 }
 
@@ -7674,6 +7719,8 @@ textarea.form-control-lg {
 
 .mb-4 {
   margin-bottom: 1.5rem !important;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 .mb-5 {
